# notedown

./: LICENSE  PLAN.md  README.md  meson.build  pnpm-lock.yaml
data/: ui.gresource.xml
data/icons/: meson.build
data/ui/: file_editor.ui  file_prop_form.ui  main.ui  main_window.ui  pref_window.ui  ui.gresource.xml
data/web/: gen-gresource.py  index.html  meson.build  package.json  pnpm-lock.yaml  vite.config.ts
data/web/src/: env.d.ts  main.scss  main.ts
data/web/src/editor/: api.ts  muya.ts
data/web/src/editor/muya/: muya.ts
data/web/src/native/: proxy.ts
data/web/src/patch/: file-url.ts
src/: App.vala  FileEditor.vala  FilePropForm.vala  MainWindow.vala  MarkdownEditor.vala  PrefWindow.vala  main.ts  main.vala
